Added a Swagger ui for API endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.profiles.active=dev
+
+logging.level.org.springdoc=DEBUG
+logging.level.io.swagger.v3=DEBUG
+logging.level.org.springframework.web=DEBUG
